--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     border-radius:10px;
     object-fit:cover;
     box-shadow:0 0 15px rgba(0,0,0,0.3);
-    content:url("xc/m.jpg")
+    content:url("xc/mmexport1698370598966.jpg")
     }
   .fsq{
     border-radius:30px;
