--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!--背景图片/前景图片--> 
   <style>
   body{
-    background-image:url("xc/背景.png");
+    background-image:url("背景.png");
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment:fixed;
@@ -72,7 +72,7 @@
     border-radius:10px;
     object-fit:cover;
     box-shadow:0 0 15px rgba(0,0,0,0.3);
-    content:url("xc/mmexport1698370598966.jpg")
+    content:url("mmexport1698370598966.jpg")
     }
   .fsq{
     border-radius:30px;
