--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     border-radius:2pc;
     width:230px;
     height:320px;
-    content:url("xc/zp1.jpg")
+    content:url("IMG_20251114_234301.jpg")
     }
   .zp1{
     border-radius:2pc;
