--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     border-radius:30px;
     width:250px;
     height:340px;
-    content:url("1761408120212.png")
+    content:url("IMG_20251025_195737.jpg")
     }
   .zp{
     border-radius:2pc;
