--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   .zip{
     width:360px;
     height:200px;
-    content:url("xc/1.jpg")
+    content:url("1754417387681.jpg")
     }
   </style> 
   <!--正文--> 
