--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     border-radius:2pc;
     width:230px;
     height:320px;
-    content:url("xc/zp.png")
+    content:url("1761408120212.png")
     }
   .zip{
     width:360px;
