--- a/index.html
+++ b/index.html
@@ -93,10 +93,15 @@
     content:url("1761408120212.png")
     }
   .zip{
-    width:360px;
-    height:200px;
-    content:url("1754417387681.jpg")
+    width:380px;
+    height:270px;
+    content:url("Image_1763557401352.jpg")
     }
+   .zip1｛
+     width:440px；
+     height:270px；
+     contebt:url（）
+     ｝
   </style> 
   <!--正文--> 
   <script src="js/jq.js"></script> 
@@ -140,13 +145,14 @@
   <hr/>
   <div id="v6" class="zlp">
   <h1>设:</h1>
-  <img id="v6" class="zip" alt="设"
-  <img id="v6" class="zip1" alt="设"
+  <img id="v6" class="zip" alt="设">
+  <img id="v6" class="zip1" alt="设"><br>
+   <font size=“3” color=“red”>本站所有素材（包括头像、设图、配色方案等）均为原创，仅展示用途，未经许可不得转载或商用。</font>
   </div>
   <hr/>
   <h1>0.1.0.12更新公告:</h1>
-  <h3>1:新增外网账号</h3>
-  <h3>2:优化UI界面</h3>
+  <h3>1:新增设图版权，严禁转载或其他商用途径</h3>
+  <h3>2:新增外网账号</h3>
   <hr/>
   <audio src=""autoplay="autoplay"></audio>
   <font size="3" color="red"><h1>BUG详情:</h1></font>
