--- a/index.html
+++ b/index.html
@@ -154,12 +154,11 @@
   <h3>1:新增设图版权，严禁转载或其他商用途径</h3>
   <h3>2:新增外网账号</h3>
   <hr/>
-  <audio src=""autoplay="autoplay"></audio>
   <font size="3" color="red"><h1>BUG详情:</h1></font>
   <font size="3" color="red"><h2>1:背景图片在移动端与客户端不适配的问题</h2></font>
   <font size="3" color="red"><h2>2:照片在移动端与客户端排列错误的问题</h2></font>
   <hr/>
-  <center><font size="3" color="red">本站由web cat软件html制作</font></center>
+  <center><font size="3" color="red">本站由web cat软件html设计，Git Hub网站搭建共同制作</font></center>
   <center><font size="3" color="red">注:本网站为测试版本，不代表最终品质，详情请以最终版本为准!!</font></center>
  </body> 
 </html>
