--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
    .zip1｛
      width:440px；
      height:270px；
-     contebt:url（“1754417387681.jpg”）
+     contebt:url（“she1.jpg”）
      ｝
   </style> 
   <!--正文--> 
