--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     height:270px;
     content:url("Image_1763557401352.jpg")
     }
-   .zip1｛
-     width:440px；
-     height:270px；
-     contebt:url（“she1.jpg”）
-     ｝
+  .zip1{
+    width:440px；
+    height:270px；
+    contebt:url（“she1.jpg”）
+    }
   </style> 
   <!--正文--> 
   <script src="js/jq.js"></script> 
@@ -111,7 +111,7 @@
   <div id="v5" class="upm">
   <h1>狐狐宝包</h1>
   <p>欢迎来到我的主页</p>
-  <p>&0.1.0.12</p>
+  <p>&0.1.0.13</p>
   </div>
   <img id="v3" class="tx" alt="用户头像">
   <h1>UP主账号:(China)🆙</h1>
@@ -150,7 +150,7 @@
   <font size=“3” color=“red”>本站所有素材（包括头像、设图、配色方案等）均为原创，仅展示用途，未经许可不得转载或商用。</font>
   </div>
   <hr/>
-  <h1>0.1.0.12更新公告:</h1>
+  <h1>0.1.0.13更新公告:</h1>
   <h3>1:新增设图版权，严禁转载或其他商用途径</h3>
   <h3>2:新增外网账号</h3>
   <hr/>
