--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     content:url("Image_1763557401352.jpg")
     }
   .zip1{
-    width:440px；
-    height:270px；
-    contebt:url（“she1.jpg”）
+    width:440px;
+    height:270px;
+    content:url("she.jpg")
     }
   </style> 
   <!--正文--> 
