--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
   <font size=“3” color=“red”>本站所有素材（包括头像、设图、配色方案等）均为原创，仅展示用途，未经许可不得转载或商用。</font>
   </div>
   <hr/>
+  <div class="yp">
+  <h1>音乐文件<测试文件></h1>
+  <audio id="v7" src="yp/少年游.mp3" controls autoplay  loop ></audio> 
+  </div>
+  <h1>背景音乐<测试文件></h1>
+  <h3>测试中</h3>
+  <hr/>
   <h1>0.1.0.13更新公告:</h1>
   <h3>1:新增设图版权，严禁转载或其他商用途径</h3>
   <h3>2:新增外网账号</h3>
