--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <hr/>
   <div class="yp">
   <h1>音乐文件<测试文件></h1>
-  <audio id="v7" src="yp/少年游.mp3" controls autoplay  loop ></audio> 
+  <audio id="v7" src="少年游.mp3" controls autoplay  loop ></audio> 
   <h1>背景音乐<测试文件></h1>
   <h3>测试中</h3>
   </div>
