--- a/zhuym.html
+++ b/zhuym.html
@@ -143,14 +143,7 @@
   <h1>设:</h1>
   <img id="v6" class="zip" alt="设">
   <img id="v6" class="zip1" alt="设"><br>
-  <font size=“3” color=“red”>本站所有素材（包括头像、设图、配色方案等）均为原创，仅展示用途，未经许可不得转载或商用。</font>
-  </div>
-  <hr/>
-  <div class="yp">
-  <h1>音乐文件<测试文件></h1>
-  <audio id="v7" src="少年游.mp3" controls autoplay  loop ></audio> 
-  <h1>背景音乐<测试文件></h1>
-  <h3>测试中</h3>
+  <font size="3" color="red">本站所有素材（包括头像、设图、配色方案等）均为原创，仅展示用途，未经许可不得转载或商用。</font>
   </div>
   <hr/>
   <h1>0.1.0.13更新公告:</h1>
