--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>狐狐宝包个人主页</title>
+    <title>安全登录页面（含背景图）</title>
     <style>
         * {
             margin: 0;
@@ -16,14 +16,29 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f2f5;
+            /* 背景图片样式 - 关键修改 */
+            background: url("https://picsum.photos/1920/1080") no-repeat center center fixed;
+            background-size: cover;
+            /* 加一层半透明蒙版，提升文字可读性 */
+            position: relative;
+        }
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: -1;
         }
         .login-box, .reset-box {
             width: 400px;
             padding: 40px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.9); /* 面板半透明 */
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            z-index: 1;
         }
         .reset-box {
             display: none;
@@ -35,7 +50,7 @@
         }
         .input-group {
             margin-bottom: 20px;
-            position: relative; /* 新增：作为验证码按钮的定位父级 */
+            position: relative; /* 作为验证码按钮的定位父级 */
         }
         .input-group label {
             display: block;
