--- a/zhuym.html
+++ b/zhuym.html
@@ -2,6 +2,11 @@
  <head> 
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <title>一个网站</title> 
+  <script type="module" src="./social-buttons.js"><script>
+ <style>
+  <!--调整大小与间距-->
+social-buttons{--size:48px;--gap:14px;}
+ <style>
   <!--全局管理-->
   <style type="text/css">
   body{
@@ -108,6 +113,8 @@
   <p>欢迎来到我的主页</p>
   <p>&0.1.0.13</p>
   </div>
+  <center><social-buttons         links='{"github":"https://github.com/huhubaobao520","youtube":"https://www.youtube.com/channel/你的频道ID","x":"https://x.com/你的账户","bilibili":"https://b23.tv/9SoR6Rq","kuaishou":"https://v.kuaishou.com/7a4nPUZ3"}'>
+  </social-buttons>
   <img id="v3" class="tx" alt="用户头像">
   <h1>UP主账号:(China)🆙</h1>
   </div>
