--- a/zhuym.html
+++ b/zhuym.html
@@ -5,8 +5,7 @@
       <title>示例：social-buttons</title>
   <script type="module" src="./social-buttons.js"></script>
   <style>
-    /* 可选：调整大小与间距 */
-    social-buttons { --size:48px; --gap:14px; }
+  social-buttons
   </style>
   <!--全局管理-->
   <style type="text/css">
