--- a/zhuym.html
+++ b/zhuym.html
@@ -117,8 +117,9 @@
   <h1>UP主账号:(China)🆙</h1>
   </div>
   <center><social-buttons
-links='{"github":"https://github.com/huhubaobao520","youtube":"https://www.youtube.com/channel/你的频道ID","x":"https://x.com/你的账户","bilibili":"https://b23.tv/9SoR6Rq","kuaishou":"https://v.kuaishou.com/7a4nPUZ3"}' >
+    links='{"github":"https://github.com/huhubaobao520","youtube":"https://www.youtube.com/channel/你的频道ID","x":"https://x.com/你的账户","bilibili":"https://b23.tv/9SoR6Rq","kuaishou":"https://v.kuaishou.com/7a4nPUZ3"}' >
   </social-buttons></center>
+  <div id="v4" class="box"> 
   <div id="v4"class="box">
   <center><a href="https://v.kuaishou.com/7a4nPUZ3">快手</a></center>
   </div>
