--- a/zhuym.html
+++ b/zhuym.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <title>一个网站</title> 
     <title>示例：social-buttons</title>
-  <script type="module" src="./social-buttons.js"></script>
+  <script type="module" src="social-buttons.js"></script>
   <style>
     social-buttons
   </style>
