Fix social-buttons markup in zhuym.html

--- a/zhuym.html
+++ b/zhuym.html
@@ -124,7 +124,7 @@
    <img id="v3" class="tx" alt="用户头像"> 
    <h1 id="v11">UP主账号:(China)🆙</h1> 
   </div> 
-    <center><social-buttons></social-buttons></social-buttons></center>
+    <center><social-buttons></social-buttons></center>
   <div id="v4" class="box"> 
    <center id="v12"> 
     <a id="v13" href="https://v.kuaishou.com/7a4nPUZ3">快手</a> 
