--- a/zhuym.html
+++ b/zhuym.html
@@ -106,7 +106,7 @@
   <!--背景图片/前景图片--> 
   <style>
   body{
-    background-image:url("xc/背景.png");
+    background-image:url("背景.png");
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment:fixed;
@@ -187,7 +187,7 @@
             注：所有外网资源必须挂梯子才可以访问<br>
             请所有访问外网人员合理、文明上网，一切违法犯罪问题都与本网站无关！！<br>
             本网站不会向访问者提供一切可以访问外网*软件等。
-   </div><center>
+   </div></center>
   <hr id="v27"> 
   <h1 id="v28">QQ粉丝群:<a id="v29" href="https://qun.qq.com/universal-share/share?ac=1&amp;authKey=ag2sqKEdvR1N%2FJAcseFmJGafeNCe0F14rQbkfBM%2F9OFneLhuMs1RJUgimQUzyKW%2B&amp;busi_data=eyJncm91cENvZGUiOiI5NzQ3NzE0NjYiLCJ0b2tlbiI6IjVqNmY3M2ZXcWNjZWVmblBOSCt1V1QrODJTNi9DMlJGbG9SWTFSaHZ1bytTWXFVSWo3SVNMNE93U1JEaExNRVYiLCJ1aW4iOiIxNTU2OTUxNzQwIn0%3D&amp;data=U3XgBZilxml-qB8ulvaLSYFD07DhUuIdfB7-NIzCdh2OTHXXxc5wFNLDiz5x5udqddb_TPW7ScCozcRuKLDOJA&amp;svctype=4&amp;tempid=h5_group_info">974771466</a></h1> 
   <img id="v5" class="fsq" alt="粉丝群"> 
