--- a/zhuym.html
+++ b/zhuym.html
@@ -157,8 +157,7 @@
    <center><div id="v5" class="upm"> 
     <h1 id="v8">狐狐宝包</h1> 
     <p id="v9">欢迎来到我的主页</p> 
-    <p id="v10">&amp;0.1.0.12</p> 
-   </div> </center>
+    <p id="v10">&amp;0.1.0.12</p></center>
               <div class="social-buttons">
                 <a href="#" class="social-btn" style="background: #333;">
                     <i class="fab fa-github"></i>
