--- a/zhuym.html
+++ b/zhuym.html
@@ -117,35 +117,35 @@
     border-radius:50pc;
     object-fit:cover;
     box-shadow:0 0 15px rgba(0,0,0,0.3);
-    content:url("xc/m.jpg")
+    content:url("头像.png")
     }
   .fsq{
     border-radius:30px;
     width:250px;
     height:340px;
-    content:url("xc/qq.jpg")
+    content:url("粉丝群.png")
     }
   .zp{
     border-radius:2pc;
     width:230px;
     height:320px;
-    content:url("xc/zp1.jpg")
+    content:url("照片2.png")
     }
   .zp1{
     border-radius:2pc;
     width:230px;
     height:320px;
-    content:url("xc/zp.png")
+    content:url("照片2.png")
     }
   .zip{
     width:380px;
     height:270px;
-    content:url("she.jpg")
+    content:url("照片登记证书.png")
     }
   .zip1{
     width:440px;
     height:270px;
-    content:url("xc/1.jpg")
+    content:url("兽设.png")
     }
   </style> 
   <!--正文--> 
