--- a/zhuym.html
+++ b/zhuym.html
@@ -140,7 +140,7 @@
   .zip{
     width:380px;
     height:270px;
-    content:url("照片登记证书.png")
+    content:url("作品登记证书.png")
     }
   .zip1{
     width:440px;
