--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>安全登录页面（含背景图）</title>
+    <title>狐狐宝包个人主页</title>
     <style>
         * {
             margin: 0;
