--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
         // 模拟后台账号密码
         const USER_ACCOUNT = "admin";
         let USER_PASSWORD = "123456";
+        const USER_ACCOUNT ="huhubaobao";
+        let USER_PASSWORD = "198630";
         // 防暴力破解配置
         const MAX_ERROR_COUNT = 3;
         const LOCK_TIME = 60;
