--- a/zhuym.html
+++ b/zhuym.html
@@ -199,7 +199,9 @@
    <img id="v6" class="zip" alt="设"> 
    <img id="v6" class="zip1" alt="设"> 
    <br id="v35"> 
-   <font id="v36" size="3" color="red">本站所有素材(包括头像、设图、配色方案等）均为原创，仅供展示用途，未经许可不得转载或商用。</font> 
+   <center><div class="foreign-note">
+   <font size="3" color="red">本站所有素材(包括头像、设图、配色方案等）均为原创，仅供展示用途，未经许可不得转载或商用。</font>
+   </div></center>
    <hr id="v60"> 
        <div class="notice-section">
         <div class="notice-card">
