--- a/zhuym.html
+++ b/zhuym.html
@@ -152,7 +152,7 @@
    <center><div id="v5" class="upm"> 
     <h1 id="v8">狐狐宝包</h1> 
     <p id="v9">欢迎来到我的主页</p> 
-    <p id="v10">&amp;0.1.0.12</p></center>
+    <p id="v10">&amp;0.1.0.25</p></center>
               <div class="social-buttons">
                 <a href="#" class="social-btn" style="background: #333;">
                     <i class="fab fa-github"></i>
@@ -205,7 +205,7 @@
    <hr id="v60"> 
        <div class="notice-section">
         <div class="notice-card">
-            <h3>8.0.1.0.12 更新公告：</h3>
+            <h3>＆.0.1.0.25 更新公告：</h3>
             <ul>
                 <li>1: 新增外网账号</li>
                 <li>2: 优化UI界面</li>
@@ -215,7 +215,7 @@
         <div class="notice-card">
             <h3 style="color: #ff4d4f;">BUG详情：</h3>
             <ul class="bug-list">
-                <li>1: 背景图片在移动端与客户端不适配*问题</li>
+                <li>1: 背景图片在移动端与客户端不适配的问题</li>
                 <li>2: 照片在移动端与客户端排列错误的问题</li> </ul>
         </div>
     </div>
