--- a/zhuym.html
+++ b/zhuym.html
@@ -168,14 +168,18 @@
   <div class="notice-section">
      <div class="notice-card">
      <h3>直播日程</h3>
-     <ul>
-        <li>暂无日程</li>
+          <ul>
+        <li>直播时间:2025/1/1</li>
+        <li>直播平台:哔哩哔哩</li>
      </ul>
      </div>
      <div class="notice-card">
      <h3>活动</h3>
      <ul>
-     <li>暂无活动</li>
+     <li>直播抽奖:(<font size="3" color="red">注:所有奖品均为1个月</font>)</li>
+     <li>一等奖:(哔哩哔哩/大会员×1);二等奖:(QQ/超级会员×3);</li>
+     <li>三等奖:(任选其一:优酷视频/咪咕视频/芒果TV/爱奇艺×4)</li>
+     <font size="3" color="red">所有中奖的人员联系UP主兑换，提供可支持兑换的手机号等进行兑换</font>
      </ul>
      </div>
   </div>
