--- a/zhuym.html
+++ b/zhuym.html
@@ -171,6 +171,8 @@
           <ul>
         <li>直播时间:2025/1/1</li>
         <li>直播平台:哔哩哔哩</li>
+        <li>直播账号:狐狐宝包</li>
+        <li>直播预约:<a href="https://b23.tv/0ZceNpo">点击预约</a></li>
      </ul>
      </div>
      <div class="notice-card">
