--- a/zhuym.html
+++ b/zhuym.html
@@ -158,6 +158,9 @@
                 <a href="https://v.kuaishou.com/7a4nPUZ3" class="social-btn" style="background: #ff5000;">
                     <i class="fab fa-kickstarter"></i>
                 </a>
+                <a href="https://v.douyin.com/yVa_9S0aOM0/ 0@0.com :1pm" class="social-btn" style="background:#000;">
+                     <i class="fab fa-tiktok"></i>
+                </a>
             </div>
   <div >
   <center><div class="foreign-note">
