--- a/zhuym.html
+++ b/zhuym.html
@@ -212,8 +212,8 @@
         <div class="notice-card">
             <h3>＆.0.1.0.25 更新公告：</h3>
             <ul>
-                <li>1: 新增外网账号</li>
-                <li>2: 优化UI界面</li>
+                <li>1: 新增抖音账号</li>
+                <li>2: </li>
            </ul>
         </div>
 
