--- a/index.html
+++ b/index.html
@@ -172,13 +172,19 @@
      <div class="notice-card">
      <h3>直播日程</h3>
           <ul>
-        <li>暂无日程</li>
+        <li>直播时间:暂定…</li>
+        <li>直播平台:哔哩哔哩/抖音</li>
+        <li>直播账号:<a href="https://b23.tv/kWLSVXF">狐狐宝包</a>/<a href="https://v.douyin.com/yVa_9S0aOM0/ 0@0.com :1pm">千屿</a></li>
+        <li>直播预约:<a href="">哔哩哔哩</a>/<a href="">抖音</a></li>
      </ul>
      </div>
      <div class="notice-card">
      <h3>活动</h3>
      <ul>
-     <li>暂无活动</li>
+     <li>时间:[2026/2(10/15/17)]</li>
+     <li>(10/15)晚8点在微信粉丝群内发放手气红包5/10元</li>
+     <li>(17)晚10/00点在微信粉丝群内发放手气红包15/20元</li>
+     <font size="3" color="red">扫描下方二维码进入QQ粉丝群，群相册第一个进入微信粉丝群。</font>
      </ul>
      </div>
   </div>
